--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,8 @@
   "singleQuote": true,
   "trailingComma": "all",
   "jsxSingleQuote": false,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "plugins": [
+    "prettier-plugin-tailwindcss"
+  ]
 }
