--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.3",
     "motion": "^12.9.2",
     "postcss": "^8.5.3",
