--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/postcss": "^4.1.3",
-    "motion": "^12.9.2",
+    "motion": "^12.23.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
